Add content to index plus logo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,9 +22,9 @@ const { title } = Astro.props;
 				<nav class="w-full sm:flex sm:items-center sm:justify-between" aria-label="Global">
 				  <div class="flex items-center justify-between">
 					<a class="flex-none text-xl font-semibold text-black focus:outline-none focus:ring-1 focus:ring-gray-600" href="#" aria-label="Brand">
-						<div class="flex items-center -mx-4">
+						<div class="flex items-center -mx-1">
 						<img src="logo.png" class="w-[60px]" alt="">
-						migm
+						<span class="ms-2">Ignacio González Muniz</span>
 					</div>
 					</a>
 					<div>
@@ -36,7 +36,7 @@ const { title } = Astro.props;
 			<slot />
 			<footer class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-between sm:text-xs">
 				<div class="me-0 sm:me-4">
-					© Ignacio González 2024.<span class="inline-block">&nbsp;🚀&nbsp;Built with Astro</span>
+					© Ignacio González Muniz 2024.<span class="inline-block">&nbsp;🚀&nbsp;Built with Astro</span>
 				</div>
 			</footer>
 		</div>
