--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props;
 				</nav>
 			  </header>
 			<slot />
-			<footer class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-between sm:text-xs">
+			<footer class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-center sm:text-xs">
 				<div class="me-0 sm:me-4">
 					© Ignacio González Muniz 2024.<span class="inline-block">&nbsp;🚀&nbsp;Built with Astro</span>
 				</div>
