--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,121 +1,186 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to my personal site">
-	<div class="py-10">
-		<section>
-			<h1 class="text-xl font-bold">Hello, World! 👋</h1>
-			<p class="pt-4">I'm a Full Stack Web Developer with an academic background in the area of language, currently on my way back into the IT industry. </p>
-			<p class="pt-2">To strengthen my always active self-taught training on the latest technologies, I recently completed a solid Coding Bootcamp, an extremely practical & intensive 3-month, full-time educational program, which encompasses over 600 hours of learning covering Node.js, Express, React.js, MySQL, MongoDB, and Git.</p>
-			<p class="pt-2">I face challenges through an analytical & methodical approach with a keen eye on detail. I really enjoy diving into open source technologies & breaking down complexity into simple steps.</p>
-			<div class="flex items-center pt-2">
-				<span class="me-2">
-					Find me on:
-				</span>
-				<a href="http://www.linkedin.com/in/migonzalezmuniz" target="_blank">
-					<svg class="w-7 h-7 text-gray-800 dark:text-white me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-						<path fill-rule="evenodd" d="M12.51 8.796v1.697a3.738 3.738 0 0 1 3.288-1.684c3.455 0 4.202 2.16 4.202 4.97V19.5h-3.2v-5.072c0-1.21-.244-2.766-2.128-2.766-1.827 0-2.139 1.317-2.139 2.676V19.5h-3.19V8.796h3.168ZM7.2 6.106a1.61 1.61 0 0 1-.988 1.483 1.595 1.595 0 0 1-1.743-.348A1.607 1.607 0 0 1 5.6 4.5a1.601 1.601 0 0 1 1.6 1.606Z" clip-rule="evenodd"/>
-						<path d="M7.2 8.809H4V19.5h3.2V8.809Z"/>
-					  </svg>
-				</a>
-				<a href="https://github.com/hopnux" target="_blank">
-					<svg class="w-7 h-7 text-gray-800 dark:text-white me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-						<path fill-rule="evenodd" d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z" clip-rule="evenodd"/>
-					</svg>	  
-				</a>
-			</div>
-		</section>
+  <div class="py-10">
+    <section>
+      <h1 class="text-xl font-bold">Hello, World! 👋</h1>
+      <p class="pt-4">
+        I'm a Full Stack Web Developer with an academic background in the area
+        of language.
+      </p>
+      <p class="pt-2">
+        To strengthen my always active self-taught training on the latest
+        technologies, I recently completed a solid Coding Bootcamp, an extremely
+        practical & intensive, full-time educational program, which encompasses
+        over 600 hours of learning covering Node.js, Express, React.js, MySQL,
+        MongoDB, and Git.
+      </p>
+      <p class="pt-2">
+        I face challenges through an analytical & methodical approach with a
+        keen eye on detail. I really enjoy diving into open source technologies
+        & breaking down complexity into simple steps.
+      </p>
+      <div class="flex items-center pt-2">
+        <span class="me-2"> Find me on: </span>
+        <a href="http://www.linkedin.com/in/migonzalezmuniz" target="_blank">
+          <svg
+            class="w-7 h-7 text-gray-800 dark:text-white me-2"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M12.51 8.796v1.697a3.738 3.738 0 0 1 3.288-1.684c3.455 0 4.202 2.16 4.202 4.97V19.5h-3.2v-5.072c0-1.21-.244-2.766-2.128-2.766-1.827 0-2.139 1.317-2.139 2.676V19.5h-3.19V8.796h3.168ZM7.2 6.106a1.61 1.61 0 0 1-.988 1.483 1.595 1.595 0 0 1-1.743-.348A1.607 1.607 0 0 1 5.6 4.5a1.601 1.601 0 0 1 1.6 1.606Z"
+              clip-rule="evenodd"></path>
+            <path d="M7.2 8.809H4V19.5h3.2V8.809Z"></path>
+          </svg>
+        </a>
+        <a href="https://github.com/hopnux" target="_blank">
+          <svg
+            class="w-7 h-7 text-gray-800 dark:text-white me-2"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </a>
+      </div>
+    </section>
 
-		<section class="mt-16">
-			<h2 class="title mb-4 text-xl">Education</h2>
-			<ul class="space-y-4">
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> Jan 2024 - Apr 2024</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Coding Bootcamp/Full Stack Web Development</span> | Hack Academy
-					</span>
-				</li>
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> Sep/Oct 2023</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Web Development Introductory Course</span> | Hack Academy
-					</span>
-				</li>
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> 2006</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Degree in Linguistics</span> | Universidad de la República
-					</span>
-				</li>
-			</ul>
-		</section>
+    <section class="mt-16">
+      <h2 class="title mb-4 text-xl">Education</h2>
+      <ul class="space-y-4">
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            Jan 2024 - Apr 2024</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline"
+              >Coding Bootcamp/Full Stack Web Development</span
+            > | Hack Academy
+          </span>
+        </li>
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            Sep/Oct 2023</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline">Web Development Introductory Course</span> |
+            Hack Academy
+          </span>
+        </li>
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            2006</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline">Degree in Linguistics</span> | Universidad de
+            la República
+          </span>
+        </li>
+      </ul>
+    </section>
 
+    <section class="mt-16">
+      <h2 class="title mb-4 text-xl">Experience</h2>
+      <ul class="space-y-4">
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            Mar 2020 - Jan 2024</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline">Minister's Secretary</span> | Ministry of Labour/Social
+            Security
+          </span>
+        </li>
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            Feb 2015 - Feb 2020</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline">Legislator's Secretary</span> | Legislative Power
+          </span>
+        </li>
+        <li class="flex flex-col gap-x-5 sm:flex-row">
+          <time class="min-w-[25%] text-gray-600 dark:text-gray-400">
+            Jul 2012 - Feb 2015</time
+          >
+          <span class="text-gray-800 dark:text-gray-400">
+            <span class="underline">Software Developer</span> | Cualit
+          </span>
+        </li>
+      </ul>
+    </section>
+    <section class="mt-16">
+      <h2 class="title mb-4 text-xl">Technologies</h2>
+      <div class="grid grid-cols-2 gap-8 sm:grid-cols-4 sm:gap-6">
+        <div class="flex flex-col gap-3 items-center">
+          <span>Node.js | Express</span>
+          <div class="flex gap-4 justify-center">
+            <img src="tech-logos/node.svg" alt="" width="40px" height="40px" />
+            <img
+              src="tech-logos/express.svg"
+              alt=""
+              width="40px"
+              height="40px"
+            />
+          </div>
+        </div>
 
-		<section class="mt-16">
-			<h2 class="title mb-4 text-xl">Experience</h2>
-			<ul class="space-y-4">
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> Mar 2020 - Jan 2024</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Minister's Secretary</span> | Ministry of Labour/Social Security
-					</span>
-				</li>
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> Feb 2015 - Feb 2020</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Legislator's Secretary</span> | Legislative Power
-					</span>
-				</li>
-				<li class="flex flex-col gap-x-5 sm:flex-row">
-					<time class="min-w-[25%] text-gray-600 dark:text-gray-400"> Jul 2012 - Feb 2015</time>
-					<span class="text-gray-800 dark:text-gray-400">
-						<span class="underline">Software Developer</span> | Cualit
-					</span>
-				</li>
-			</ul>
-		</section>
-		<section class="mt-16">
-			<h2 class="title mb-4 text-xl">Technologies</h2>
-				<div class="flex flex-wrap gap-y-10 justify-center">
-					<div class="flex flex-col items-center gap-3 w-full sm:w-1/3">
-						<span>Node | Express</span>
-						<div class="flex gap-4">
-							<img src="tech-logos/node.svg" alt="" width="40px" height="40px">
-							<img src="tech-logos/express.svg" alt="" width="40px" height="40px">
-						</div>
-					</div>
+        <div class="flex flex-col gap-3 items-center">
+          <span>Sequelize | MySQL</span>
+          <div class="flex gap-4">
+            <img
+              src="tech-logos/sequelize.svg"
+              alt=""
+              width="40px"
+              height="40px"
+            />
+            <img src="tech-logos/mysql.svg" alt="" width="40px" height="40px" />
+          </div>
+        </div>
 
-					<div class="flex flex-col items-center gap-3 w-full sm:w-1/3">
-						<span>Sequelize | MySQL</span>
-						<div class="flex gap-4">
-							<img src="tech-logos/sequelize.svg" alt="" width="40px" height="40px">
-							<img src="tech-logos/mysql.svg" alt="" width="40px" height="40px">
-						</div>
-					</div>
+        <div class="flex flex-col gap-3 items-center">
+          <span>Mongoose | MongoDB</span>
+          <div class="flex gap-4">
+            <img
+              src="tech-logos/mongoose.svg"
+              alt=""
+              width="40px"
+              height="40px"
+            />
+            <img
+              src="tech-logos/mongodb.svg"
+              alt=""
+              width="40px"
+              height="40px"
+            />
+          </div>
+        </div>
 
-					<div class="flex flex-col items-center gap-3 w-full sm:w-1/3">
-						<span>Mongoose | MongoDB</span>
-						<div class="flex gap-4">
-							<img src="tech-logos/mongoose.svg" alt="" width="40px" height="40px">
-							<img src="tech-logos/mongodb.svg" alt="" width="40px" height="40px">
-						</div>
-					</div>
-				
-				
-					<div class="flex flex-col items-center gap-3 w-full sm:w-1/3">
-						<span>React | Redux</span>
-						<div class="flex gap-4">
-							<img src="tech-logos/react.svg" alt="" width="40px" height="40px">
-							<img src="tech-logos/redux.svg" alt="" width="35px" height="35px">
-						</div>
-					</div>
-				</div>
-				
-		</section>
-	</div>
+        <div class="flex flex-col gap-3 items-center">
+          <span>React | Redux</span>
+          <div class="flex gap-4">
+            <img src="tech-logos/react.svg" alt="" width="40px" height="40px" />
+            <img src="tech-logos/redux.svg" alt="" width="35px" height="35px" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </Layout>
 
-<style>
-	
-</style>
+<style></style>
