Change index.astro title & delete residual file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to my personal site">
+<Layout title="Ignacio González Muniz">
   <div class="py-10">
     <section>
       <h1 class="text-xl font-bold">Hello, World! 👋</h1>
