--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,40 +8,49 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<div class="container mx-auto p-4 py-[4rem] max-w-[50rem] font-mono">
-			<header class="mb-auto flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full text-sm py-4">
-				<nav class="w-full sm:flex sm:items-center sm:justify-between" aria-label="Global">
-				  <div class="flex items-center justify-between">
-					<a class="flex-none text-xl font-semibold text-black focus:outline-none focus:ring-1 focus:ring-gray-600" href="#" aria-label="Brand">
-						<div class="flex items-center -mx-1">
-						<img src="logo.png" class="w-[60px]" alt="">
-						<span class="ms-2">Ignacio González Muniz</span>
-					</div>
-					</a>
-					<div>
-
-					</div>
-				  </div>
-				</nav>
-			  </header>
-			<slot />
-			<footer class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-center sm:text-xs">
-				<div class="me-0 sm:me-4">
-					© Ignacio González Muniz 2024.<span class="inline-block">&nbsp;🚀&nbsp;Built with Astro</span>
-				</div>
-			</footer>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <div class="container mx-auto p-4 py-[4rem] max-w-[50rem] font-mono">
+      <header
+        class="mb-auto flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full text-sm py-4"
+      >
+        <nav
+          class="w-full sm:flex sm:items-center sm:justify-between"
+          aria-label="Global"
+        >
+          <div class="flex items-center justify-between">
+            <a
+              class="flex-none text-xl font-semibold text-black focus:outline-none focus:ring-1 focus:ring-gray-600"
+              href="#"
+              aria-label="Brand"
+            >
+              <div class="flex items-center -mx-1">
+                <img src="logo.png" class="w-[60px]" alt="" />
+                <span class="ms-2">Ignacio González Muniz</span>
+              </div>
+            </a>
+            <div></div>
+          </div>
+        </nav>
+      </header>
+      <slot />
+      <footer
+        class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-center sm:text-xs"
+      >
+        <div class="me-0 sm:me-4">
+          © Ignacio González Muniz 2024.<span class="inline-block"
+            >&nbsp;🚀&nbsp;Built with Astro</span
+          >
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
-<style>
-
-</style>
+<style></style>
