--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -235,10 +235,9 @@ import Layout from "../layouts/Layout.astro";
           </div>
 
           <div class="flex flex-col gap-3 items-center">
-            <span>Git | Github</span>
+            <span>Git</span>
             <div class="flex gap-4">
               <img src="tech-logos/git.svg" alt="" width="40px" height="40px" />
-              <img src="github.svg" alt="" width="40px" height="40px" />
             </div>
           </div>
         </div>
