Minor modification to content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,9 +61,8 @@ import Layout from "../layouts/Layout.astro";
             <span class="underline">Web Development Introductory Course</span> |
             Hack Academy
             <span class="inline-block text-gray-500 text-sm"
-              >Intensive 60-hour course centered on the necessary tools to
-              create attractive web pages using HTML, CSS / Bootstrap &
-              JavaScript.</span
+              >Intensive 60-hour course focused on the necessary tools to create
+              attractive web pages using HTML, CSS / Bootstrap & JavaScript.</span
             >
           </span>
         </li>
