--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
           <div class="flex items-center justify-between">
             <a
               class="flex-none text-xl font-semibold text-black focus:outline-none focus:ring-1 focus:ring-gray-600"
-              href="#"
+              href="/"
               aria-label="Brand"
             >
               <div class="flex items-center -mx-1">
@@ -36,7 +36,6 @@ const { title } = Astro.props;
                 <span class="ms-2">Ignacio González Muniz</span>
               </div>
             </a>
-            <div></div>
           </div>
         </nav>
       </header>
