Minor fix to Linkedin url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Layout from "../layouts/Layout.astro";
       <div class="flex items-center pt-2">
         <span class="me-2"> Find me on: </span>
         <a
-          href="http://www.linkedin.com/in/migonzalezmuniz"
+          href="http://www.linkedin.com/in/igonzalezmuniz"
           target="_blank"
           class="me-2"
         >
