Minor fix to intro text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Layout from "../layouts/Layout.astro";
       </p>
       <p class="pt-2">
         To strengthen my always active self-taught training on the latest
-        technologies, I recently completed a solid Coding Bootcamp, a full-time
-        educational program centered on the MERN stack.
+        technologies, I recently completed an intensive Coding Bootcamp, a
+        full-time educational program centered on the MERN stack.
       </p>
       <p class="pt-2">
         I face challenges through an analytical & methodical approach with a
